Fixed viewing issue on small screens

--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -90,3 +90,9 @@ input, textarea {
 textarea {
   z-index: 1;
 }
+
+@media only screen and (max-width: 575px) {
+  .break {
+    display: none;
+  }
+}
